# groundwire

./: .gitignore  CLAUDE.md  Makefile  README.md  peru.yaml
.github/workflows/: deploy-desk.yml  trigger-urbit-build.yml
app/: ord-watcher.hoon
causeway/: README.md  hw-stub.html  index.html  package-lock.json  package.json  vite.config.ts
causeway/desktop/: README.md  causeway.py  causeway_tui.py  pyproject.toml
causeway/desktop/docs/: CONFIDENTIAL-COMETS.md
causeway/desktop/tests/: test_causeway.py
causeway/docs/: OPERATIONS.md
causeway/public/: boot.sh
causeway/src/: main.ts
causeway/tests/: cue.spec.ts  dump_jam_vectors.py  dump_vectors.py  encoder.spec.ts  mine.spec.ts  patp.spec.ts  select.spec.ts  signing.spec.ts  snapshot.spec.ts  tweak.spec.ts  ur.spec.ts  xpub.spec.ts
desk/: desk.bill
desk/app/: btc-provider.hoon  ord-sender.hoon  ord-watcher.hoon  reg-tester.hoon  urb-watcher.hoon
desk/lib/: bip69.hoon  bitcoin-utils.hoon  bitcoin.hoon  btc-provider.hoon  btc-script.hoon  btc.hoon  btcio.hoon  crac.hoon  ed.hoon  groundwire.hoon  lais.hoon  ord-sender.hoon  ord-watcher.hoon  ord.hoon  psbt.hoon  urb-core.hoon  urb-encoder.hoon  urb.hoon
desk/mar/: block-id.hoon  ud.hoon  urb-points.hoon
desk/sur/: bitcoin.hoon  btc-provider.hoon  ord-sender.hoon  ord-watcher.hoon  ord.hoon  psbt.hoon  urb.hoon
desk/ted/: get-blocks.hoon
groundwire/: desk.bill
lib/: lais.hoon  nac.hoon  nord.hoon  wiry.hoon
onboarding/: README.md
spv-wallet/: .gitignore  README.md  config.example.json  desk.bill  peru.yaml  spec.md  sync.sh
(+237 files in other folders)
